#98 ユーザレスポンスにロールリストを追加