@@ -1,9 +1,11 @@
 package cc.rits.membership.console.iam.infrastructure.api.response;
 
+import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import cc.rits.membership.console.iam.domain.model.UserGroupModel;
 import cc.rits.membership.console.iam.domain.model.UserModel;
+import cc.rits.membership.console.iam.enums.Role;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -22,38 +24,44 @@ public class UserResponse {
     /**
      * ユーザID
      */
-    @Schema(required = true)
+    @Schema(requiredMode = Schema.RequiredMode.REQUIRED)
     Integer id;
 
     /**
      * ファーストネーム
      */
-    @Schema(required = true)
+    @Schema(requiredMode = Schema.RequiredMode.REQUIRED)
     String firstName;
 
     /**
      * ラストネーム
      */
-    @Schema(required = true)
+    @Schema(requiredMode = Schema.RequiredMode.REQUIRED)
     String lastName;
 
     /**
      * メールアドレス
      */
-    @Schema(required = true)
+    @Schema(requiredMode = Schema.RequiredMode.REQUIRED)
     String email;
 
     /**
      * 入学年度
      */
-    @Schema(required = true)
+    @Schema(requiredMode = Schema.RequiredMode.REQUIRED)
     Integer entranceYear;
 
     /**
      * ユーザグループリスト
      */
-    @Schema(required = true)
+    @Schema(requiredMode = Schema.RequiredMode.REQUIRED)
     List<UserGroupResponse> userGroups;
+
+    /**
+     * ロールリスト
+     */
+    @Schema(requiredMode = Schema.RequiredMode.REQUIRED, enumAsRef = true)
+    List<Role> roles;
 
     public UserResponse(final UserModel userModel) {
         this.id = userModel.getId();
@@ -61,7 +69,12 @@ public class UserResponse {
         this.lastName = userModel.getLastName();
         this.email = userModel.getEmail();
         this.entranceYear = userModel.getEntranceYear();
-        this.userGroups = userModel.getUserGroups().stream().map(UserGroupResponse::new).collect(Collectors.toList());
+        this.userGroups = userModel.getUserGroups().stream().map(UserGroupResponse::new).toList();
+        this.roles = userModel.getUserGroups().stream() //
+            .map(UserGroupModel::getRoles) //
+            .flatMap(Collection::stream) //
+            .distinct() //
+            .toList();
     }
 
 }
