@@ -1,7 +1,6 @@
 package cc.rits.membership.console.iam.infrastructure.factory;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -39,7 +38,7 @@ public class UserGroupFactory {
         return userGroupModel.getRoles().stream() //
             .map(Role::getId) //
             .map(roleId -> new UserGroupRole(userGroupModel.getId(), roleId)) //
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
